# petab_sciml

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy_release.yml
doc/: api.rst  conf.py  development.rst  format.rst  format_overview.rst  how_to_guides.rst  index.rst  introduction.rst  layers.rst  logo.rst  maintainers.rst  software_support.rst  training_approaches.rst  training_strategies.rst  trouble.rst  tutorial.rst
doc/standard/: array_data_schema.json
docs/src/: format.md
petab_sciml/: __init__.py
petab_sciml/hdf5/: __init__.py  write_hdf5.py
petab_sciml/problem_utils/: __init__.py  neural_ode.py
petab_sciml/standard/: __init__.py  array_data.py  nn_model.py  test_array_data.py
src/python/: pyproject.toml
src/python/petab_sciml/problem_utils/: __init__.py  neural_ode.py
src/python/petab_sciml/standard/: __init__.py  array_data.py  nn_model.py  test_array_data.py
src/python/petab_sciml/tmp_examples/: example.py  example2.py  example4.py  example5.py  example7.py
src/python/petab_sciml/tmp_examples/data/: nn_model1.yaml
src/python/petab_sciml/tmp_examples/data2/: nn_model0.yaml
src/python/petab_sciml/tmp_examples/data4/: nn_model0.yaml
src/python/petab_sciml/tmp_examples/data5/: nn_model0.yaml
src/python/petab_sciml/tmp_examples/data6/: nn_model0.yaml
src/python/petab_sciml/tmp_examples/data7/: nn_model0.yaml  nn_model1.yaml
src/python/tests/problem_utils/: test_neural_ode.py
tests/: conftest.py  test_nn_yaml_export.py
(+50 files in other folders)
